--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.11.0",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
